--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "geolib": "^2.0.24",
     "node-telegram-bot-api": "^0.28.0",
     "tgfancy": "^0.11.0"
   }
